more work on perfecting leaderboard
Former-commit-id: fa185bba0ba4bc99a07f84a063e9e21e01c0e537
Former-commit-id: a6b0f3d3a31c326eba49a49b439b5ea08b77c1d3

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -517,6 +517,20 @@ fieldset > legend {
     background-color: #d4d1cc;
 }
 
+.tableAltRowColor {
+    background-color: #eaf5fb;
+}
+
+.tableRowUserColor {
+    color: #d89374;
+    font-weight: bold;
+}
+
+.tableRowUserCurrentColor {
+    color:green;
+    font-weight: bold;
+}
+
 .correct {
    color:green
 }
@@ -898,6 +912,10 @@ fieldset > legend {
 
 #ASRScorePanel fieldset legend {
     margin-bottom: 5px;
+}
+
+#LeaderboardTable thead th {
+    border-top: 0px solid #DDDDDD;
 }
 
 .chartDim {
