more event logging support - for record/play buttons in add/edit dialog, check boxes in audio panel, and comments, and better sizing of charts after practice session, better audio playback feedback
Former-commit-id: 9ff3ff170ea739b9acc8d01f34a209166038f297 [formerly b98d3860a4863ad3dbdbb1eae385939677f16dbf] [formerly 9ff3ff170ea739b9acc8d01f34a209166038f297 [formerly b98d3860a4863ad3dbdbb1eae385939677f16dbf] [formerly 9ff3ff170ea739b9acc8d01f34a209166038f297 [formerly b98d3860a4863ad3dbdbb1eae385939677f16dbf] [formerly 101ee121ae0f08b88bd0aed12c7614556dac4bd6]]]
Former-commit-id: a7de7d7dab4804d5e6199271dba74cffb17669e6 [formerly a0593a3d08f0ec65f1404db2a326778b23218a1e] [formerly a7de7d7dab4804d5e6199271dba74cffb17669e6 [formerly a0593a3d08f0ec65f1404db2a326778b23218a1e] [formerly 9e4df00f2704c5a48a8a1be34f292b43e3b44ef3]] [formerly 4d55cd3aee300ec1c189b5c16fcb1dcd1fb9d67d [formerly 8b18db61102d35ba38f466533cd50d7b467c6050] [formerly 4d55cd3aee300ec1c189b5c16fcb1dcd1fb9d67d [formerly 8b18db61102d35ba38f466533cd50d7b467c6050] [formerly b24e10c984771341c5ef6bb152919b1de8508446]]]
Former-commit-id: 4d55cd3aee300ec1c189b5c16fcb1dcd1fb9d67d [formerly 8b18db61102d35ba38f466533cd50d7b467c6050]
Former-commit-id: 161711f8cda082b992540b00a4a8ac6bbb89466e [formerly 2315fb5db5c15e75a500b25d1b6da4cb64a804a8] [formerly 6c8b7e1491fd74807fbda5ab3df642e2b3f3751d]
Former-commit-id: 4f9aabd8a880e6034c51fbd18aa12160aaa8bd07
Former-commit-id: 08a54f1d796b01ef647c94956e7cd204cc32615e

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -851,9 +851,12 @@ fieldset > legend {
  }
 
 .mouseOverHighlight {
-    background-color: yellow;
     cursor: pointer;
 }
+
+.playingAudioHighlight {
+     background-color: yellow;
+ }
 
 .cardBorderShadow {
     background-color: #FFFFFF;
