--- a/src/mitll/langtest/client/analysis/ScoresCellTableStyleSheet.css
+++ b/src/mitll/langtest/client/analysis/ScoresCellTableStyleSheet.css
@@ -5,3 +5,11 @@
     font-family: sans-serif;
     cursor:pointer;
 }
+
+.cellTableKeyboardSelectedRow {
+    background: #628cd5;
+}
+
+.cellTableKeyboardSelectedRowCell {
+    border: 2px solid #628cd5;
+}
