--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -872,6 +872,7 @@ fieldset > legend {
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1), 1px 1px 4px rgba(0, 0, 0, 0.12);
     padding: 5px;
     margin-bottom:5px;
+    margin-top:5px;
 }
 
 .buttonGroupInset6 {
