--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -1133,3 +1133,9 @@ body .btn-toolbar > .btn-group > .btn.active {
 .boxShadow {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15) inset, 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
+
+body .hidden-download-frame {
+    display: none;
+    width: 0;
+    height: 0;
+}
